# home_closes_note_details_on_close_button_click

appId: com.cnrture.uitestcomposemaestro
---
- launchApp
- runFlow: login_button_valid_credentials.yaml
- tapOn:
    id: "note_title0"
- tapOn:
    id: "note_detail_close_button"
- assertNotVisible:
    id: "note_detail_close_button"