# home_displays_note_details_on_click

appId: com.cnrture.uitestcomposemaestro
---
- launchApp
- runFlow: login_button_valid_credentials.yaml
- tapOn:
    id: "note_title0"
- assertVisible:
    id: "note_detail_title"
- assertVisible:
    id: "note_detail_content"
- assertVisible:
    id: "note_detail_close_button"