# login_button_valid_credentials

appId: com.cnrture.uitestcomposemaestro
---
- launchApp
- tapOn:
    id: "usernameField"
- inputText: "test"
- tapOn:
    id: "passwordField"
- inputText: "password"
- tapOn:
    id: "loginButton"
- assertNotVisible:
    id: "errorDialogText"