# login_error_on_invalid_credentials

appId: com.cnrture.uitestcomposemaestro
---
- launchApp
- tapOn:
    id: "usernameField"
- inputText: "invalidUser"
- tapOn:
    id: "passwordField"
- inputText: "invalidPass"
- tapOn:
    id: "loginButton"
- assertVisible: "Please enter valid credentials."